seaqt/QtWidgets/gen_qwidget.h

class QMetaObject;
class QPoint;
class QRect;
class QRegion;
class QSize;
class QStyle;
class QWidget;
class QWidgetData;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyle QStyle;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
typedef struct QWidgetData QWidgetData;
bool QWidget_override_virtual_hideEvent(void* self, intptr_t slot);
bool QWidget_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QWidget_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QWidget_override_virtual_changeEvent(void* self, intptr_t slot);
void QWidget_virtualbase_changeEvent(void* self, QEvent* param1);
bool QWidget_override_virtual_metric(void* self, intptr_t slot);
int QWidget_virtualbase_metric(const void* self, int param1);
bool QWidget_override_virtual_initPainter(void* self, intptr_t slot);
void QWidget_virtualbase_initPainter(const void* self, QPainter* painter);
bool QWidget_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QWidget_virtualbase_redirected(const void* self, QPoint* offset);
bool QWidget_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QWidget_virtualbase_sharedPainter(const void* self);
bool QWidget_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QWidget_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QWidget_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QWidget_virtualbase_inputMethodQuery(const void* self, int param1);
bool QWidget_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QWidget_virtualbase_focusNextPrevChild(void* self, bool next);
bool QWidget_override_virtual_eventFilter(void* self, intptr_t slot);
bool QWidget_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QWidget_override_virtual_timerEvent(void* self, intptr_t slot);
void QWidget_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QWidget_override_virtual_childEvent(void* self, intptr_t slot);
void QWidget_virtualbase_childEvent(void* self, QChildEvent* event);
bool QWidget_override_virtual_customEvent(void* self, intptr_t slot);
void QWidget_virtualbase_customEvent(void* self, QEvent* event);
bool QWidget_override_virtual_connectNotify(void* self, intptr_t slot);
void QWidget_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QWidget_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QWidget_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QWidget_delete(QWidget* self);