seaqt/QtWidgets/gen_qwidget.nim

proc fcQWidget_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_hideEvent".}
proc fQWidget_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QWidget_virtualbase_nativeEvent".}
proc fcQWidget_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_nativeEvent".}
proc fQWidget_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QWidget_virtualbase_changeEvent".}
proc fcQWidget_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_changeEvent".}
proc fQWidget_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QWidget_virtualbase_metric".}
proc fcQWidget_override_virtual_metric(self: pointer, slot: int) {.importc: "QWidget_override_virtual_metric".}
proc fQWidget_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QWidget_virtualbase_initPainter".}
proc fcQWidget_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QWidget_override_virtual_initPainter".}
proc fQWidget_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QWidget_virtualbase_redirected".}
proc fcQWidget_override_virtual_redirected(self: pointer, slot: int) {.importc: "QWidget_override_virtual_redirected".}
proc fQWidget_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QWidget_virtualbase_sharedPainter".}
proc fcQWidget_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QWidget_override_virtual_sharedPainter".}
proc fQWidget_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QWidget_virtualbase_inputMethodEvent".}
proc fcQWidget_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_inputMethodEvent".}
proc fQWidget_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QWidget_virtualbase_inputMethodQuery".}
proc fcQWidget_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QWidget_override_virtual_inputMethodQuery".}
proc fQWidget_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QWidget_virtualbase_focusNextPrevChild".}
proc fcQWidget_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QWidget_override_virtual_focusNextPrevChild".}
proc fQWidget_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QWidget_virtualbase_eventFilter".}
proc fcQWidget_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QWidget_override_virtual_eventFilter".}
proc fQWidget_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_timerEvent".}
proc fcQWidget_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_timerEvent".}
proc fQWidget_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_childEvent".}
proc fcQWidget_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_childEvent".}
proc fQWidget_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_customEvent".}
proc fcQWidget_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_customEvent".}
proc fQWidget_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QWidget_virtualbase_connectNotify".}
proc fcQWidget_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QWidget_override_virtual_connectNotify".}
proc fQWidget_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QWidget_virtualbase_disconnectNotify".}
proc fcQWidget_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QWidget_override_virtual_disconnectNotify".}
proc fcQWidget_delete(self: pointer) {.importc: "QWidget_delete".}


func init*(T: type gen_qwidget_types.QWidgetData, h: ptr cQWidgetData): gen_qwidget_types.QWidgetData =
  T(h: h)
proc create*(T: type gen_qwidget_types.QWidgetData, param1: gen_qwidget_types.QWidgetData): gen_qwidget_types.QWidgetData =
  gen_qwidget_types.QWidgetData.init(fcQWidgetData_new(param1.h))

proc operatorAssign*(self: gen_qwidget_types.QWidgetData, param1: gen_qwidget_types.QWidgetData): void =
  fcQWidgetData_operatorAssign(self.h, param1.h)

proc delete*(self: gen_qwidget_types.QWidgetData) =
  fcQWidgetData_delete(self.h)

func init*(T: type gen_qwidget_types.QWidget, h: ptr cQWidget): gen_qwidget_types.QWidget =
  T(h: h)
proc create*(T: type gen_qwidget_types.QWidget, parent: gen_qwidget_types.QWidget): gen_qwidget_types.QWidget =
  gen_qwidget_types.QWidget.init(fcQWidget_new(parent.h))

proc create*(T: type gen_qwidget_types.QWidget, ): gen_qwidget_types.QWidget =
  gen_qwidget_types.QWidget.init(fcQWidget_new2())

proc create*(T: type gen_qwidget_types.QWidget, parent: gen_qwidget_types.QWidget, f: cint): gen_qwidget_types.QWidget =
  gen_qwidget_types.QWidget.init(fcQWidget_new3(parent.h, cint(f)))

proc metaObject*(self: gen_qwidget_types.QWidget, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQWidget_metaObject(self.h))

proc metacast*(self: gen_qwidget_types.QWidget, param1: cstring): pointer =
  fcQWidget_metacast(self.h, param1)

proc tr*(_: type gen_qwidget_types.QWidget, s: cstring): string =
  let v_ms = fcQWidget_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qwidget_types.QWidget, s: cstring): string =
  let v_ms = fcQWidget_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc devType*(self: gen_qwidget_types.QWidget, ): cint =
  fcQWidget_devType(self.h)

proc winId*(self: gen_qwidget_types.QWidget, ): uint =
  fcQWidget_winId(self.h)

proc createWinId*(self: gen_qwidget_types.QWidget, ): void =
  fcQWidget_createWinId(self.h)

proc internalWinId*(self: gen_qwidget_types.QWidget, ): uint =
  fcQWidget_internalWinId(self.h)

proc effectiveWinId*(self: gen_qwidget_types.QWidget, ): uint =
  fcQWidget_effectiveWinId(self.h)

proc style*(self: gen_qwidget_types.QWidget, ): gen_qstyle_types.QStyle =
  gen_qstyle_types.QStyle(h: fcQWidget_style(self.h))

proc setStyle*(self: gen_qwidget_types.QWidget, style: gen_qstyle_types.QStyle): void =
  fcQWidget_setStyle(self.h, style.h)

proc isTopLevel*(self: gen_qwidget_types.QWidget, ): bool =
  fcQWidget_isTopLevel(self.h)

proc isWindow*(self: gen_qwidget_types.QWidget, ): bool =
  fcQWidget_isWindow(self.h)

proc isModal*(self: gen_qwidget_types.QWidget, ): bool =
  fcQWidget_isModal(self.h)

proc windowModality*(self: gen_qwidget_types.QWidget, ): cint =
  cint(fcQWidget_windowModality(self.h))

proc setWindowModality*(self: gen_qwidget_types.QWidget, windowModality: cint): void =
  fcQWidget_setWindowModality(self.h, cint(windowModality))

proc isEnabled*(self: gen_qwidget_types.QWidget, ): bool =
  fcQWidget_isEnabled(self.h)

proc isEnabledTo*(self: gen_qwidget_types.QWidget, param1: gen_qwidget_types.QWidget): bool =
  fcQWidget_isEnabledTo(self.h, param1.h)

proc isEnabledToTLW*(self: gen_qwidget_types.QWidget, ): bool =
  fcQWidget_isEnabledToTLW(self.h)

proc setEnabled*(self: gen_qwidget_types.QWidget, enabled: bool): void =
  fcQWidget_setEnabled(self.h, enabled)

proc setDisabled*(self: gen_qwidget_types.QWidget, disabled: bool): void =
  fcQWidget_setDisabled(self.h, disabled)

proc setWindowModified*(self: gen_qwidget_types.QWidget, windowModified: bool): void =
  fcQWidget_setWindowModified(self.h, windowModified)

proc frameGeometry*(self: gen_qwidget_types.QWidget, ): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQWidget_frameGeometry(self.h))

proc geometry*(self: gen_qwidget_types.QWidget, ): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQWidget_geometry(self.h))

proc normalGeometry*(self: gen_qwidget_types.QWidget, ): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQWidget_normalGeometry(self.h))

proc x*(self: gen_qwidget_types.QWidget, ): cint =
  fcQWidget_x(self.h)

proc y*(self: gen_qwidget_types.QWidget, ): cint =
  fcQWidget_y(self.h)

proc pos*(self: gen_qwidget_types.QWidget, ): gen_qpoint_types.QPoint =
  gen_qpoint_types.QPoint(h: fcQWidget_pos(self.h))

proc frameSize*(self: gen_qwidget_types.QWidget, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQWidget_frameSize(self.h))

proc size*(self: gen_qwidget_types.QWidget, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQWidget_size(self.h))

proc width*(self: gen_qwidget_types.QWidget, ): cint =
  fcQWidget_width(self.h)

proc height*(self: gen_qwidget_types.QWidget, ): cint =
  fcQWidget_height(self.h)

proc rect*(self: gen_qwidget_types.QWidget, ): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQWidget_rect(self.h))

proc childrenRect*(self: gen_qwidget_types.QWidget, ): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQWidget_childrenRect(self.h))

proc childrenRegion*(self: gen_qwidget_types.QWidget, ): gen_qregion_types.QRegion =
  gen_qregion_types.QRegion(h: fcQWidget_childrenRegion(self.h))

proc minimumSize*(self: gen_qwidget_types.QWidget, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQWidget_minimumSize(self.h))

proc maximumSize*(self: gen_qwidget_types.QWidget, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQWidget_maximumSize(self.h))

proc minimumWidth*(self: gen_qwidget_types.QWidget, ): cint =
  fcQWidget_minimumWidth(self.h)

proc minimumHeight*(self: gen_qwidget_types.QWidget, ): cint =
  fcQWidget_minimumHeight(self.h)

proc maximumWidth*(self: gen_qwidget_types.QWidget, ): cint =
  fcQWidget_maximumWidth(self.h)

proc maximumHeight*(self: gen_qwidget_types.QWidget, ): cint =
  fcQWidget_maximumHeight(self.h)

proc setMinimumSize*(self: gen_qwidget_types.QWidget, minimumSize: gen_qsize_types.QSize): void =
  fcQWidget_setMinimumSize(self.h, minimumSize.h)

proc setMinimumSize*(self: gen_qwidget_types.QWidget, minw: cint, minh: cint): void =
  fcQWidget_setMinimumSize2(self.h, minw, minh)

proc setMaximumSize*(self: gen_qwidget_types.QWidget, maximumSize: gen_qsize_types.QSize): void =
  fcQWidget_setMaximumSize(self.h, maximumSize.h)

proc setMaximumSize*(self: gen_qwidget_types.QWidget, maxw: cint, maxh: cint): void =
  fcQWidget_setMaximumSize2(self.h, maxw, maxh)

proc setMinimumWidth*(self: gen_qwidget_types.QWidget, minw: cint): void =
  fcQWidget_setMinimumWidth(self.h, minw)

proc setMinimumHeight*(self: gen_qwidget_types.QWidget, minh: cint): void =
  fcQWidget_setMinimumHeight(self.h, minh)

proc setMaximumWidth*(self: gen_qwidget_types.QWidget, maxw: cint): void =
  fcQWidget_setMaximumWidth(self.h, maxw)

proc setMaximumHeight*(self: gen_qwidget_types.QWidget, maxh: cint): void =
  fcQWidget_setMaximumHeight(self.h, maxh)

proc sizeIncrement*(self: gen_qwidget_types.QWidget, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQWidget_sizeIncrement(self.h))

proc setSizeIncrement*(self: gen_qwidget_types.QWidget, sizeIncrement: gen_qsize_types.QSize): void =
  fcQWidget_setSizeIncrement(self.h, sizeIncrement.h)

proc setSizeIncrement*(self: gen_qwidget_types.QWidget, w: cint, h: cint): void =
  fcQWidget_setSizeIncrement2(self.h, w, h)

proc baseSize*(self: gen_qwidget_types.QWidget, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQWidget_baseSize(self.h))

proc setBaseSize*(self: gen_qwidget_types.QWidget, baseSize: gen_qsize_types.QSize): void =
  fcQWidget_setBaseSize(self.h, baseSize.h)

proc setBaseSize*(self: gen_qwidget_types.QWidget, basew: cint, baseh: cint): void =
  fcQWidget_setBaseSize2(self.h, basew, baseh)

proc setFixedSize*(self: gen_qwidget_types.QWidget, fixedSize: gen_qsize_types.QSize): void =
  fcQWidget_setFixedSize(self.h, fixedSize.h)
